3-clubweb/05-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-svc
  labels:
    name: web-svc
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
